<resources>
    <string name="app_name">AutoLogBook</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_0">0</string>
    <string name="addEntry_comment">Комментарий</string>
    <string name="addEntry_price">Цена, руб</string>
    <string name="addEntry_cancel">Отмена</string>
    <string name="addEntry_date">Дата</string>
    <string name="addEntry_buttonDate">Дата</string>
    <string name="addEntry_litre">Залито, л</string>
    <string name="addEntry_buttonAdd">Добавить</string>
    <string name="placeholder">Placeholder</string>
</resources>